--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,14 @@
 }
 
 body {
-  background-color: #2b1d0f;
+  height:100vh;
+  background-image:url(recipe.png);
+  background-size:cover;
+  background-position:center;
+  background-repeat: no-repeat;
   color: #fff;
 }
+ 
 header nav {
   background-color: #212121;
   padding: 20px;
@@ -17,6 +22,7 @@ header nav {
   align-items: center;
   z-index: 1;
 }
+
 header nav h1 {
   font-size: 26px;
   font-weight: 700;
@@ -28,10 +34,12 @@ header nav form {
   display: flex;
   justify-content: center;
 }
+
 form input[type="text"] {
   flex-grow: 1;
   margin-right: 10px;
 }
+
 form input[type="text"],
 button {
   border: none;
@@ -39,6 +47,7 @@ button {
   padding: 10px;
   border-radius: 4px;
 }
+
 @media screen and(max-width:600px) {
   header nav form {
     flex-direction: column;
@@ -53,9 +62,11 @@ button {
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
+
 button:hover {
   background-color: #ff5c5c;
 }
+
 .recipe-conatiner {
   text-align: center;
   margin-top: 30px;
@@ -66,6 +77,7 @@ button:hover {
   margin: 10px auto;
   place-items: center;
 }
+
 .recipe {
   background-color: #fff;
   display: flex;
@@ -77,21 +89,26 @@ button:hover {
   /* border: 4px solid yellow; */
   max-width: 350px;
 }
+
 .recipe img {
   height: 300px;
 }
+
 .recipe h3 {
   font-size: 24px;
   margin-block: 5px;
 }
+
 .recipe p {
   font-size: 20px;
   color: #4a4a4a;
   margin: 5px 0;
 }
+
 .recipe span {
   font-weight: 600;
 }
+
 .recipe button {
   font-size: 20px;
   font-weight: 600;
@@ -102,6 +119,7 @@ button:hover {
   color: white;
   border: none;
 }
+
 .recipe-details {
   display: none;
   position: fixed;
@@ -129,6 +147,7 @@ background: #b5b5ba;
 border-radius: 16px;
 --webkit-border-radius:16px;
 }
+
 .recipe-details-content{
     padding: 30px;
 }
@@ -139,15 +158,18 @@ border-radius: 16px;
     text-transform: uppercase;
     text-decoration: underline;
 }
+
 .IngredientListt{
  margin-top: 10px;
  margin-left:20px ;
 }
+
 .recipeInstructions p{
 line-height: 30px;
 white-space: pre-line;
 
 }
+
 .recipe-close-btn{
 border: none;
 font-size: 18px;
